# SCAU-UFM

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
libs/core/: CMakeLists.txt
libs/core/src/: error.cpp
libs/coupling/core/: CMakeLists.txt
libs/coupling/drainage/: CMakeLists.txt
libs/coupling/driver/: CMakeLists.txt
libs/coupling/river/: CMakeLists.txt
libs/mesh/: CMakeLists.txt
libs/mesh/src/: mesh.cpp
libs/surface2d/: CMakeLists.txt
libs/validation/release_gate/: CMakeLists.txt
spikes/dflowfm/: CMakeLists.txt
spikes/dflowfm/cases/: README.md  README_reach_with_weir.md  README_single_reach.md  README_single_reach_lateral.md  single_reach.mdu
spikes/dflowfm/evidence/: abi_gotchas.md  authored_single_reach.md  authored_single_reach.trace.txt  authored_single_reach_dt_contract.md  authored_single_reach_restart.md  interface_gap_matrix.md  runbook.md  single_reach.trace.txt  single_reach_lateral_write.md  spike_report.md  var_inventory.captured.md  var_inventory.md
spikes/dflowfm/host/: dflowfm_spike_host.cpp
spikes/swmm/: CMakeLists.txt
spikes/swmm/cases/: README.md  README_manhole_overflow.md  manhole_overflow.inp  single_pipe.inp
spikes/swmm/evidence/: abi_gotchas.md  g8_real_swmm_inp_evidence.md  interface_gap_matrix.md  spike_report.md
spikes/swmm/host/: swmm_spike_host.cpp
tests/: CMakeLists.txt
tests/golden/: CMakeLists.txt  golden_tolerances.hpp
tests/golden/dflowfm_checkpoint_reload/: CMakeLists.txt  test_dflowfm_checkpoint_reload.cpp
tests/golden/dflowfm_river_steady/: CMakeLists.txt  test_dflowfm_river_steady.cpp
tests/golden/dpm_drag_decay/: CMakeLists.txt  test_dpm_drag_decay.cpp
tests/golden/dual_engine_shared_cell/: CMakeLists.txt  test_dual_engine_shared_cell.cpp
tests/golden/dual_engine_shared_cell_real_both/: CMakeLists.txt  test_dual_engine_shared_cell_real_both.cpp
tests/golden/dual_engine_shared_cell_real_swmm/: CMakeLists.txt  test_golden_dual_engine_shared_cell_real_swmm.cpp
tests/golden/evidence/: README.md
tests/golden/hydrostatic_step/: CMakeLists.txt  test_hydrostatic_step.cpp
tests/golden/narrow_gap_blockage/: CMakeLists.txt  test_narrow_gap_blockage.cpp
tests/golden/phi_c_edge_zero_velocity/: CMakeLists.txt  test_phi_c_edge_zero_velocity.cpp
tests/golden/phi_c_spd_reject/: CMakeLists.txt  test_phi_c_spd_reject.cpp
tests/golden/phi_t_jump_hydrostatic/: CMakeLists.txt  test_phi_t_jump_hydrostatic.cpp
tests/golden/reference/: tolerances.md
tests/golden/roof_swmm_transfer/: CMakeLists.txt  test_golden_roof_swmm_transfer.cpp
tests/golden/runoff_urban_block/: CMakeLists.txt
tests/golden/snapshot_replay_mass_deficit/: CMakeLists.txt  test_snapshot_replay_mass_deficit.cpp
tests/golden/suite_manifest/: check_manifest.py  goldensuite.json
tests/golden/swmm_single_pipe_surcharge/: CMakeLists.txt  swmm_manhole_overflow.inp  test_swmm_single_pipe_surcharge.cpp
tests/golden/tri_coupling_real_minimal/: CMakeLists.txt  test_tri_coupling_real_minimal.cpp
tests/integration/swmm_dflowfm/: CMakeLists.txt  test_tri_coupling_multistep.cpp
tests/unit/core/: CMakeLists.txt  test_error.cpp  test_types.cpp
tests/unit/coupling/: CMakeLists.txt  fake_dflowfm_bmi.cpp  fake_dflowfm_bmi_missing_symbol.cpp  test_coupling_adapter_boundaries.cpp  test_coupling_apply_exchange.cpp  test_coupling_core_state.cpp  test_coupling_dflowfm_checkpoint.cpp  test_coupling_dflowfm_engine.cpp  test_coupling_drain_split.cpp  test_coupling_engine_health.cpp  test_coupling_engine_interface_exchange.cpp  test_coupling_engine_report.cpp  test_coupling_exchange_audit.cpp  test_coupling_exchange_decision.cpp  test_coupling_exchange_pipeline.cpp  test_coupling_fault_controller_blocked_action.cpp  test_coupling_fault_controller_blocked_action_ordering.cpp  test_coupling_fault_controller_diagnostic.cpp  test_coupling_fault_controller_passive_action_audit.cpp  test_coupling_fault_controller_passive_action_audit_ordering.cpp  test_coupling_fault_controller_passive_action_outcome.cpp  test_coupling_fault_controller_passive_action_outcome_ordering.cpp  test_coupling_fault_controller_passive_state.cpp  test_coupling_fault_controller_passive_state_ordering.cpp  test_coupling_fault_controller_passive_transition.cpp  test_coupling_fault_controller_passive_transition_ordering.cpp  test_coupling_fault_controller_policy.cpp  test_coupling_fault_controller_scheduler_control_request.cpp  test_coupling_fault_controller_scheduler_control_request_ordering.cpp  test_coupling_fault_controller_scheduler_control_result.cpp  test_coupling_fault_controller_scheduler_control_result_ordering.cpp  test_coupling_flow_limit.cpp  test_coupling_head_driven_exchange.cpp  test_coupling_mass_deficit_account.cpp  test_coupling_mock_scheduler.cpp  test_coupling_mock_scheduler_fault_consumption.cpp  test_coupling_mock_scheduler_fault_consumption_ordering.cpp  test_coupling_mock_scheduler_fault_observation.cpp  test_coupling_mock_scheduler_fault_observation_ordering.cpp  test_coupling_mock_swmm_engine.cpp  (+15 more)
tests/unit/mesh/: CMakeLists.txt  test_mesh_geometry.cpp  test_mesh_validation.cpp
tests/unit/surface2d/: CMakeLists.txt  test_boundary_conditions.cpp  test_boundary_flux.cpp  test_cfl_diagnostics_module.cpp  test_cfl_rollback.cpp  test_conservative_update.cpp  test_coupling_exchange_source.cpp  test_cvc_spatial_phi_t_dynamic_perturbation.cpp  test_dpm_closure_laws.cpp  test_dpm_edge_conveyance_assembly.cpp  test_dpm_edge_source_conservation.cpp  test_dpm_fields.cpp  test_dpm_phi_t_remap.cpp  test_dpm_tensor_projection.cpp  test_edge_classification.cpp  test_friction_source.cpp  test_geometry_cache.cpp  test_hllc_flux.cpp  test_hllc_wave_mass.cpp  test_hllc_wave_momentum.cpp  test_hydrostatic_reconstruction.cpp  test_momentum_transport.cpp  test_phi_t_source.cpp  test_pressure_momentum.cpp  test_rainfall_infiltration_source.cpp  test_runoff_fields.cpp  test_runoff_generation.cpp  test_runoff_golden_urban_block.cpp  test_runoff_green_ampt.cpp  test_runoff_ground.cpp  test_runoff_result.cpp  test_runoff_roof.cpp  test_step.cpp  (+12 more)
(+370 files in other folders)
