find_package(GTest CONFIG REQUIRED)
find_package(Python3 REQUIRED COMPONENTS Interpreter)

add_subdirectory(unit/core)
add_subdirectory(unit/mesh)
add_subdirectory(unit/surface2d)
add_subdirectory(unit/coupling)
add_subdirectory(unit/validation/release_gate)
add_subdirectory(integration/swmm_dflowfm)
add_subdirectory(golden)
